# brainWorld

./: .gitignore  package-lock.json
cli/: CMakeLists.txt  sample_config.yaml  temp_pointcloud_extractor.cpp
meta/: cdn  domain  env  name  server
native/: CMakeLists.txt  package.json  prepareEnv.sh
native/src/: data_holder_wrap.cpp  data_holder_wrap.h  dataset_wrap.cpp  dataset_wrap.h  hello.cc  index_wrap.cpp  index_wrap.h  ingredient_backend.cpp
server/: package-lock.json  package.json  tsconfig.json
server/debug/: notify
server/src/: Watchfile.server  bootstrap.js  bootstrap.ts  errors.js  errors.ts  routeDecorators.js  routeDecorators.ts  settings.js  settings.ts  typings.json  validators.js  validators.ts
server/src/route/: api.annotatingTask.js  api.annotatingTask.ts  api.annotation.ts  api.checkingTask.js  api.checkingTask.ts  api.echo.js  api.echo.ts  api.frame.js  api.frame.ts  api.frameTask.js  api.frameTask.ts  api.user.js  api.user.ts
server/src/service/: annotatingTaskService.js  annotatingTaskService.ts  checkingTaskService.js  checkingTaskService.ts  frameService.js  frameTaskService.js  frameTaskService.ts  initService.js  initService.ts  (+6 more)
server/test/: api.echo.test.js  api.echo.test.ts  tsconfig.json  typings.json
util/: build  cdn  configure  deploy  dev  dev.restart  dev.stop  login  release  remote.restart  remote.stop  service  start
webapp/: package-lock.json  package.json  tsconfig.json
webapp/dev/: createRequire
webapp/src/: .gitignore  R.conf.d.ts  Watchfile.webapp  debug-init.js  index.template.html  typings.json
(+309 files in other folders)
